projects/compiler/test/typechecker/decorators/error_too_few_args.abra
decorator Bar {
  a: String
}

@Bar
func foo() {}
